--- a/assets/style.css
+++ b/assets/style.css
@@ -14,14 +14,17 @@ body {
     width: 500px;
     height: 320px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
+    border: 1px solid #555;
 }
 .teclado{
     background-color: #000;
     margin-left: 30px;
+    padding: 5px 15px;
 }
 .teclado--linha{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 .teclado--botao{
     width: 70px;
@@ -32,8 +35,30 @@ body {
     justify-content: center;
     align-items: center;
     margin: 10px;
-    font-size: 20px;
+    font-size: 25px;
     cursor: pointer;
-    box-shadow: 3px 3px 5px #332e2e;
+    box-shadow: 2px 2px 0px #383434;
+}
+.btn--branco{
+    background-color: #FFF;
+    color: #000;
+    font-size: 16px;
+    width: 90px;
+    box-shadow: 2px 2px 0px #cfcfcf;
+}
+.btn--corrige{
+    background-color: #F09046;
+    color: #000;
+    font-size: 16px;
+    width: 90px;
+    box-shadow: 2px 2px 0px #b36e39;
+}
+.btn--confirma{
+    background-color: #48c079;
+    color: #000;
+    font-size: 20px;
+    width: 90px;
+    height: 50px;
+    box-shadow: 2px 2px 0px #3c8d5d;
 }
 
