--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,8 @@ body {
     height: 320px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
     border: 1px solid #555;
+    display: flex;
+    flex-direction: column;
 }
 .teclado{
     background-color: #000;
@@ -62,3 +64,19 @@ body {
     box-shadow: 2px 2px 0px #3c8d5d;
 }
 
+.divisao-1{
+    flex:1;
+    display: flex;
+}
+.d-1-left{
+    flex: 1;
+}
+.d-1-right{
+    width: 90px;
+}
+.divisao-2{
+    height: 50px;
+    font-size: 15px;
+    border-top: 2px solid #000;
+    padding: 8px;
+}
