--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,15 @@
+@keyframes pisca{
+    0% { opacity: 0.2;}
+    50% { opacity: 1;}
+    100% { opacity: 0.2;}
+}
+
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .urna{
@@ -12,7 +19,6 @@ body {
 }
 .tela{
     width: 500px;
-    height: 320px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
     border: 1px solid #555;
     display: flex;
@@ -70,9 +76,60 @@ body {
 }
 .d-1-left{
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+.d-1-1{
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.d-1-2{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.d-1-3{
+    height: 50px;
+}
+.numero{
+    display: inline-block;
+    width: 30px;
+    height: 40px;
+    border: 1px solid #000;
+    text-align: center;
+    line-height: 40px;
+    font-size: 25px;
+}
+.pisca{
+    animation-name: pisca;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+.d-1-4{
+    flex: 1;
+    line-height: 30px;
 }
 .d-1-right{
     width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.d-1-image{
+    border: 1px solid #000;
+    background-color: #FFF;
+    text-align: center;
+    font-size: 14px;
+}
+.d-1-image img{
+    width: 100%;
+}
+.d-1-image.small{
+    width: 80%;
+    font-size: 12px;
 }
 .divisao-2{
     height: 50px;
