--- a/assets/style.css
+++ b/assets/style.css
@@ -148,3 +148,11 @@ body {
     font-size: 40px;
     font-weight: 600;
 }
+.aviso--fim {
+    font-size: 70px;
+    font-weight: bold;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
