--- a/assets/style.css
+++ b/assets/style.css
@@ -6,15 +6,18 @@
 
 body {
     margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    flex-direction: column;
 }
 
 .urna{
     background-color: #dbd5c9;
     padding:30px;
+    margin: 20px 0px;
     display: flex;
 }
 .tela{
@@ -155,4 +158,24 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.prefeito, .vereador{
+    margin-top: 20px;
+}
+p{
+    margin:0;
+    font-size: 20px;
+    font-weight: bold;
+}
+table{
+    width: 600px;
+    border: 1px solid;
+    text-align: center;
+    table-layout: fixed;
+}
+th{
+    background-color: #CCC;
+}
+table td{
+    background-color: #EEE;
 }
